--- a/NaViz/package.json
+++ b/NaViz/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@react-three/drei": "^9.115.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "roslib": "^1.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
